[package]
name = "reverse_grpc_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
parking_lot = "0.12"
log = "0.4"
uuid = { version = "1.7", features = ["v4"] }

[build-dependencies]
tonic-build = "0.11"